--- a/Lab2/Lab2/Lab2/Views/Movies/Index.cshtml
+++ b/Lab2/Lab2/Lab2/Views/Movies/Index.cshtml
@@ -10,13 +10,13 @@
     <a asp-action="Create">Create New</a>
 </p>
 @*<form asp-controller="Movies" asp-action="Index">*@
-<form asp-controller="Movies" asp-action="Index" method="get">  
+<form asp-controller="Movies" asp-action="Index" method="get">
     <p>
         <select asp-for="MovieGenre" asp-items="Model.Genres">
             <option value="">All</option>
         </select>
-		 Title: <input type="text" asp-for="SearchString" />
-        @*Title: <input type="text" name="searchString" />*@
+        Title: <input type="text" asp-for="SearchString" />
+        @* Title: <input type="text" name="SearchString" />*@
         <input type="submit" value="Filter" />
     </p>
 </form>
@@ -34,6 +34,9 @@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Movies[0].Price)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Movies[0].Rating)
             </th>
             <th></th>
         </tr>
@@ -53,6 +56,9 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Price)
             </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Rating)
+                </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
